order is not working

--- a/index.html
+++ b/index.html
@@ -32,31 +32,45 @@
                 </div>
             </div>
             <p class="you-selected">You selected</p>
-            <hr>
-            <div class="row">
-                <div class="col-2">
-                    <div id="my-condiments-selection"></div>
-                </div>
-                <div class="col-2">
-                    <div id="my-meat-selection"></div>
-                </div>
-                <div class="col-2">
-                    <div id="my-cheese-selection"></div>
-                </div>
-                <div class="col-2">
-                    <div id="my-bread-selection"></div>
-                </div>
-                <div class="col-2">
-                    <div id="my-veggie-selection"></div>
-                </div>
-                <div class="col-2">
-                    <div id="my-sandwich-selection"></div>
-                </div>
+            <hr>            
+            <div class="row justify-content-center">
+                    <div class="col-2">
+                        <div id="condiments-selection" id="condimentsId">
+                            <h6>Condiments</h6>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div id="meat-selection">
+                            <h6>Meat</h6>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div id="cheese-selection">
+                            <h6>Cheese</h6>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div id="bread-selection">
+                            <h6>Bread</h6>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div id="sandwich-selection">
+                            <h6>Sandwich</h6>
+                        </div>
+                    </div>  
+                    <div class="col-2">
+                        <div id="veggies-selection">
+                            <h6>Veggies</h6>
+                        </div>
+                    </div>          
             </div>
             <hr>
             <div class="row">
                 <div id="final-order"></div>
+                <div id="my-order"></div>
             </div>
+            
         </div>
         <script type = "module" src="javascripts/main.js"></script>
     </body>
